console_py.txt
>>> type(5)
<class 'int'>
>>> type(4.5)
<class 'float'>
>>> "hello"
'hello'
>>> hello
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hello' is not defined
>>> "hello"
'hello'
>>> type('a')
<class 'str'>
>>> 9 / 2
4.5
>>> 9 // 2
4
>>> 5 +5 *3
20
>>> 10 / 3
3.3333333333333335
>>> 10 % 3
1
>>> 20%10
0
>>> 22%7
1
>>> x = 4
>>> x
4
>>> y
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'y' is not defined
>>> y = 8
>>> y
8
>>> y = 12
>>> x + y
16
>>> a = x + y
>>> a
16
>>> type(a)
<class 'int'>
>>> a = 7.8
>>> type(a)
<class 'float'>
>>> x
4
>>> 'x'
'x'
>>> hello = 1
>>> hello
1
>>> goodbye
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'goodbye' is not defined
>>> 'hello'
'hello'
>>> hello
1
>>> type(hello)
<class 'int'>
>>> 'type'
'type'
>>> age = 25
>>> age
25
>>> age = 26
>>> z = x + y
>>> age = 25
>>> age + 1
26
>>> age
25
>>> age = age + 1
>>> age
26
>>> age = age + 1
>>> age
27
>>> age = age + 1
>>> age
28
>>> age = age + 5
>>> age
33
>>> age = age - 10
>>> age
23
>>> age = age * 2
>>> age
46
>>> age = age / 2
>>> age
23.0
>>> age = age + 1
>>> age
24.0
>>> age += 1
>>> age
25.0
>>> age -=1
>>> age
24.0
>>> age *=2
>>> age
48.0
>>> age /=2
>>> age
24.0
>>> age //=2
>>> age
12.0
>>> age **=2
>>> age
144.0
>>> age = 12
>>> age = age * age
>>> age
144
>>> age = 12
>>> age = age ** 2
>>> age
144
>>> age **=2
>>> age
20736
>>> age = 23
>>> import math
>>> math.sqrt(age)
4.795831523312719
>>> import datetime
>>> datetime.datetime.now()
datetime.datetime(2020, 7, 17, 10, 44, 33, 211423)
>>> datetime.datetime.today()
datetime.datetime(2020, 7, 17, 10, 48, 47, 601559)
>>> age
23
>>> del age
>>> age
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'age' is not defined
>>>
>>> rent = 5000
>>> food = 2000
>>> car = 1000
>>> income = 20000
>>> income - (food + car + rent)
12000
>>> save = income - (food + car + rent)
>>> save
12000
>>> save
12000
>>> "hello"
'hello'
>>> 'hello'
'hello'
>>> 'he's perfect'
  File "<stdin>", line 1
    'he's perfect'
        ^
SyntaxError: invalid syntax
>>> "he's perfect"
"he's perfect"
>>> 'he\'s perfect'
"he's perfect"
>>> greet = 'hello'
>>> greet
'hello'
>>> greet[]
  File "<stdin>", line 1
    greet[]
          ^
SyntaxError: invalid syntax
>>> greet[0]
'h'
>>> greet[1]
'e'
>>> greet[0]
'h'
>>> greet[1]
'e'
>>> greet[2]
'l'
>>> greet[3]
'l'
>>> greet[4]
'o'
>>> greet[5]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> greet[-1]
'o'
>>> greet[-2]
'l'
>>> greet[-10]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> greet[-5]
'h'
>>> greet[0:2]
'he'
>>> greet[:2]
'he'
>>> greet[3:4]
'l'
>>> greet[-1:2]
''
>>> greet[-1:]
'o'
>>> greet
'hello'
>>> greet + ' world'
'hello world'
>>> greet
'hello'
>>> full_greet = greet + ' world'
>>> full_greet
'hello world'
>>> full_greet * 3
'hello worldhello worldhello world'
>>> full_greet.upper()
'HELLO WORLD'
>>> cheese = 'brie, chedder, stiltion'
>>> cheese
'brie, chedder, stiltion'
>>> cheese.split(',')
['brie', ' chedder', ' stiltion']
>>> all_cheese = cheese.split(',')
>>> all_cheese
['brie', ' chedder', ' stiltion']
>>> all_cheese[0]
'brie'
>>> all_cheese[1]
' chedder'
>>> all_cheese[2]
' stiltion'
>>> all_cheese[1][2]
'h'
>>> cheese = 'brie,chedder,stiltion'
>>> fibi = 1, 1, 2, 3, 5, 8, 13
>>> fibi
(1, 1, 2, 3, 5, 8, 13)
>>> fibi = [1, 1, 2, 3, 5, 8, 13]
>>> fibi
[1, 1, 2, 3, 5, 8, 13]
>>> fibi[0]
1
>>> fibi[-1]
13
>>> fibi[-2]
8
>>> fibi[3]
3
>>> fibi[3:6]
[3, 5, 8]
>>> fibi[:6]
[1, 1, 2, 3, 5, 8]
>>> fibi [2:]
[2, 3, 5, 8, 13]
>>> fibi [:-1]
[1, 1, 2, 3, 5, 8]
>>> fibi [-1:]
[13]
>>> fibi [-1:-5]
[]
>>> fibi [-1:0]
[]
>>> fibi [-1:1]
[]
>>> fibi [::-1]
[13, 8, 5, 3, 2, 1, 1]
>>> fibi [::2]
[1, 2, 5, 13]
>>> fibi [::-1]
[13, 8, 5, 3, 2, 1, 1]
>>> greet
'hello'
>>> greet[::-1]
'olleh'
>>> fib2 = [21, 34, 55]
>>> fibi + fib2
[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]
>>> fib2 + fibi
[21, 34, 55, 1, 1, 2, 3, 5, 8, 13]
>>> fib3 = fibi + fib2
>>> fib3
[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]
>>> fib3.append(89)
>>> fib3
[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]
>>> fib3.pop()
89
>>> fib3
[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]
>>> fib3.append(89)
>>> fib3.remove(89)
>>> fib3
[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]
>>> fib3.remove(55)
>>> fib3
[1, 1, 2, 3, 5, 8, 13, 21, 34]
>>> del (fib3[1])
>>> fib3
[1, 2, 3, 5, 8, 13, 21, 34]
>>> nums = [5,-1, 0 , 100]
>>> nums.sort()
>>> nums
[-1, 0, 5, 100]
>>> max(nums)
100
>>> nums = [5,-1, 0 , 100]
>>> sorted(nums)
[-1, 0, 5, 100]
>>> nums
[5, -1, 0, 100]
>>> nums
[5, -1, 0, 100]
>>> len(nums)
4
>>> len(greet)
5
>>> [1, 2, 3, [4,5,6]]
[1, 2, 3, [4, 5, 6]]
>>> ls = [1, 2, 3, [4,5,6]]
>>> ls[0]
1
>>> ls[1]
2
>>> ls[2]
3
>>> ls[3]
[4, 5, 6]
>>> ls[3][1]
5
>>> ls = [1, 2, 3, [6, 3, -2, 12]]
>>> ls.sort()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: '<' not supported between instances of 'list' and 'int'
>>> ls[3].sort
<built-in method sort of list object at 0x01B53A08>
>>> ls[3].sort()
>>> ls[3]
[-2, 3, 6, 12]
>>> type(ls)
<class 'list'>
>>> type(ls[3])
<class 'list'>
>>> type(ls[1])
<class 'int'>
>>> ls.append(3)
>>> ls
[1, 2, 3, [-2, 3, 6, 12], 3]
>>> ls.append([3,4])
>>> ls
[1, 2, 3, [-2, 3, 6, 12], 3, [3, 4]]
>>> max(ls)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: '>' not supported between instances of 'list' and 'int'
>>> max(ls[3])
12
>>> ls[::-1]
[[3, 4], 3, [-2, 3, 6, 12], 3, 2, 1]
>>> ls[2:3]
[3]
>>>
